# weberpenn

./: README.rst  pyproject.toml
conda/: environment.yml  meta.yaml
src/openalea/weberpenn/: mtg_client.py  tree_geom.py
src/openalea/weberpenn/wralea/: trunk_parameters.py
test/: test_mtg.py
